--- a/package.json
+++ b/package.json
@@ -86,7 +86,7 @@
     "tagger"
   ],
   "engines": {
-    "node": ">=20.0.0 <21"
+    "node": ">=20.0.0"
   },
   "main": "lib/index.js",
   "license": "Apache-2.0",
